# sonote

./: .gitignore  README.md  SKILL.md  pyproject.toml  pytest.ini  sonote.spec
.github/workflows/: ci.yml  release.yml
scripts/: benchmark_models.py  build.py
scripts/finetune/: README.md  convert_ct2.py  evaluate.py  it_domain_scripts.json  prepare_data.py  run_all.py  setup_env.sh  train_whisper_lora.py
src/: __main__.py  _server_impl.py  audio_capture.py  autostart.py  cli.py  config.py  continuous.py  cookies.py  db.py  desktop.py  diarize.py  discord_notify.py  doctor.py  domain_keywords.py  download.py  export.py  media_control.py  meeting_writer.py  merge.py  paths.py  polish.py  postprocess.py  probe.py  runtime_env.py  server.py  setup.py  transcribe.py  tray.py  updater.py  validate.py  whisper_daemon.py  whisper_worker.py
src/desktop_app/: __init__.py  browser.py  controller.py  tray_adapter.py
src/meeting/: __init__.py  context.py  pipeline.py
src/runtime/: __init__.py  context.py
src/web/: __init__.py  state.py
src/web/routes/: __init__.py  core.py  devices.py  keywords.py  profiles.py  sessions.py  stream.py
static/: settings.html  speaker_profile.html  viewer.html
tests/: conftest.py  test_api.py  test_audio_capture.py  test_autostart.py  test_cli_dispatch.py  test_cli_json.py  test_config.py  test_continuous.py  test_desktop.py  test_desktop_singleton.py  test_domain_keywords.py  test_e2e.py  test_embedding_mock.py  test_export.py  test_meeting_accuracy_helpers.py  test_meeting_pipeline.py  test_meeting_startup.py  test_meeting_writer.py  test_paths.py  test_polish.py  test_polish_mock.py  test_postprocess.py  test_profiles_api.py  test_search_api.py  test_search_integration.py  test_security_hardening.py  test_server.py  test_server_keywords.py  test_sessions.py  test_setup.py  test_shutdown_semantics.py  test_speaker_auto_register.py  test_stt_regression.py  test_viewer_ui.py  test_websocket.py
tests/snapshots/: cli_commands.txt  rest_routes.txt  ws_messages.txt
