[project]
name = "media-transcriber"
version = "1.1.0b1"
description = "스트림/회의/오디오 한국어 음성 인식(STT) 도구"
requires-python = ">=3.11"
authors = [{ name = "tellang" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["whisper", "stt", "korean", "transcription", "faster-whisper", "meeting", "live-stream"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.2.0",
    "yt-dlp>=2024.0.0",
    "nvidia-cublas-cu12>=12.0.0",
    "nvidia-cudnn-cu12>=9.0.0",
    "httpx>=0.27.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "watchdog>=4.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
diarize = ["pyannote-audio>=3.1", "torch>=2.0.0"]
docx = ["python-docx>=1.0.0"]
pdf = [
    "fpdf2>=2.8",
]

[project.scripts]
media-transcriber = "src.cli:main"

[project.urls]
Homepage = "https://github.com/tellang/media-transcriber"
Repository = "https://github.com/tellang/media-transcriber"
Issues = "https://github.com/tellang/media-transcriber/issues"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["../static/*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
