[project]
name = "sonote"
version = "2.0.1"
description = "AI 에이전트를 위한 소리 노트 — 실시간 한국어 음성 전사 CLI"
requires-python = ">=3.11"
authors = [{ name = "tellang" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["sonote", "whisper", "stt", "korean", "transcription", "faster-whisper", "meeting", "live-stream", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.2.0",
    "yt-dlp>=2024.0.0",
    "nvidia-cublas-cu12>=12.0.0",
    "nvidia-cudnn-cu12>=9.0.0",
    "httpx>=0.27.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "watchdog>=4.0.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
diarize = ["pyannote-audio>=3.1", "torch>=2.0.0"]
desktop = [
    "pywebview>=5.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]
docx = ["python-docx>=1.0.0"]
pdf = [
    "fpdf2>=2.8",
]
media = ["pycaw>=20230407"]

[project.scripts]
sonote = "src.cli:main"

[project.urls]
Homepage = "https://github.com/tellang/sonote"
Repository = "https://github.com/tellang/sonote"
Issues = "https://github.com/tellang/sonote/issues"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["../static/*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
